add README.md and fix bug